# ScenGE

./: .gitignore  LICENSE.txt  README.md  carla_env.sh  environment.yaml  pyproject.toml
safebench/agent/: __init__.py
safebench/agent/config/: ppo.yaml  sac.yaml  td3.yaml
safebench/agent/safe_rl/: rl_agent.py
safebench/agent/safe_rl/policy/: base_policy.py
safebench/gym_carla/: __init__.py  env_wrapper.py  replay_buffer.py
safebench/gym_carla/envs/: __init__.py  carla_env.py  misc.py  render.py  route_planner.py
safebench/runner/: __init__.py  base_runner.py  carla_runner.py  scenic_runner.py
safebench/scenario/: __init__.py  scenario_data_loader.py
safebench/scenario/config/: cs.yaml  eval_scenic.yaml
safebench/scenario/scenario_definition/: atomic_criteria.py  basic_scenario.py  route_scenario.py  scenic_scenario.py
safebench/scenario/scenario_definition/adv_behavior_single/: junction_crossing_route.py  maneuver_opposite_direction.py  object_crash_intersection.py  object_crash_vehicle.py  other_leading_vehicle.py
safebench/scenario/scenario_manager/: carla_data_provider.py  scenario_config.py  scenario_manager.py  timer.py  traffic_events.py
safebench/scenario/scenario_policy/: base_policy.py  dummy_policy.py  hardcode_policy.py  reinforce_continuous.py
safebench/scenario/tools/: route_manipulation.py  route_parser.py  scenario_helper.py  scenario_operation.py  scenario_utils.py
safebench/scenge/: __init__.py
safebench/scenge/msgen/: __init__.py  meta_scenario_generation.py
safebench/scenge/threat/: __init__.py  attention.py  io.py  losses.py  pgd.py
safebench/util/: carla_setup.py  launch.py  logger.py  metric_util.py  pid_controller.py  run_util.py  scenic_utils.py  torch_util.py
scripts/: calc_metrics.py  eval.py  scenge_pipeline.py  select_traj.py  train_scenario.py
(+22 files in other folders)
